changed the eslint and added experience too

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,10 +3,44 @@
   "rules": {
     "react/no-unescaped-entities": "off",
     "@next/next/no-img-element": "off",
-    "react-hooks/exhaustive-deps": "warn",
+    "react-hooks/exhaustive-deps": "off",
+    "react-hooks/rules-of-hooks": "off",
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "react/display-name": "off",
-    "no-console": "off"
+    "no-console": "off",
+    "no-debugger": "off",
+    "no-empty": "off",
+    "no-empty-function": "off",
+    "no-undef": "off",
+    "no-redeclare": "off",
+    "no-var": "off",
+    "prefer-const": "off",
+    "prefer-arrow-callback": "off",
+    "no-useless-escape": "off",
+    "no-case-declarations": "off",
+    "no-fallthrough": "off",
+    "no-prototype-builtins": "off",
+    "no-async-promise-executor": "off",
+    "no-misleading-character-class": "off",
+    "no-shadow": "off",
+    "no-use-before-define": "off",
+    "react/prop-types": "off",
+    "react/react-in-jsx-scope": "off",
+    "react/jsx-key": "off",
+    "react/jsx-no-target-blank": "off",
+    "react/jsx-no-duplicate-props": "off",
+    "react/no-unknown-property": "off",
+    "react/no-array-index-key": "off",
+    "react/jsx-no-undef": "off",
+    "@next/next/no-html-link-for-pages": "off",
+    "@next/next/no-css-tags": "off",
+    "@next/next/no-sync-scripts": "off",
+    "@next/next/no-page-custom-font": "off",
+    "jsx-a11y/alt-text": "off",
+    "jsx-a11y/anchor-is-valid": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/no-static-element-interactions": "off",
+    "jsx-a11y/no-noninteractive-element-interactions": "off"
   }
 }
